# XFEM

./: CMakeLists.txt  analytical.cpp  analytical.h  computationTools.cpp  computationTools.h  fem.cpp  fem.h  gauss.h  lagrange.cpp  lagrange.h  main.cpp  struct.h  xfem.cpp  xfem.h
geo/: circle.geo  line.geo  lineBreak.geo
include/gmm/: gmm_std.h
